--- a/index.html
+++ b/index.html
@@ -11,156 +11,189 @@
       rel="stylesheet"
     />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navig list">
-        <a class="header-logo link" href="./index.html"
-          >Web<span class="logo-part link">Studio</span></a
-        >
-        <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-address">
-        <ul class="address-list list">
-          <li>
-            <a class="header-address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-navig list">
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="logo-part link">Studio</span></a
+          >
+          <ul class="header-menu list">
+            <li class="header-menu-item">
+              <a class="header-menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a class="header-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="address-list list">
+            <li>
+              <a
+                class="header-address-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <section class="service">
-        <h2>/</h2>
-        <ul class="service-list list">
-          <li class="service-item">
-            <h3 class="service-name">Strategy</h3>
-            <p class="service-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="service-item">
-            <h3 class="service-name">Punctuality</h3>
-            <p class="service-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="service-item">
-            <h3 class="service-name">Diligence</h3>
-            <p class="service-item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="service-item">
-            <h3 class="service-name">Technologies</h3>
-            <p class="service-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container service-container">
+          <h2 hidden>service</h2>
+          <ul class="service-list list">
+            <li class="service-item">
+              <h3 class="service-name">Strategy</h3>
+              <p class="service-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="service-item">
+              <h3 class="service-name">Punctuality</h3>
+              <p class="service-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="service-item">
+              <h3 class="service-name">Diligence</h3>
+              <p class="service-item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="service-item">
+              <h3 class="service-name">Technologies</h3>
+              <p class="service-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="mesenger">
-        <h2 class="mesenger-title">What are we doing</h2>
-        <ul class="mesenger-list list">
-          <li>
-            <img
-              src="./images/Rectangle71.jpg"
-              alt="Desktop app img"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Mesenger img"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Mobile app img"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container mesenger-container">
+          <h2 class="mesenger-title">What are we doing</h2>
+          <ul class="mesenger-list list">
+            <li>
+              <img
+                src="./images/Rectangle71.jpg"
+                alt="Desktop app img"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="Mesenger img"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="Mobile app img"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="people">
-        <h2 class="people-title">Our Team</h2>
-        <ul class="people-list list">
-          <li class="people-item">
-            <img
-              src="./images/img.jpg"
-              alt="photo of Mark Guerrero"
-              width="264"
-            />
-            <h3 class="people-name">Mark Guerrero</h3>
-            <p class="people-text">Product Designer</p>
-          </li>
-          <li class="people-item">
-            <img src="./images/img22.jpg" alt="photo of Tom Ford" width="264" />
-            <h3 class="people-name">Tom Ford</h3>
-            <p class="people-text">Frontend Developer</p>
-          </li>
-          <li class="people-item">
-            <img
-              src="./images/img23.jpg"
-              alt="photo of Camila Garcia"
-              width="264"
-            />
-            <h3 class="people-name">Camila Garcia</h3>
-            <p class="people-text">Marketing</p>
-          </li>
-          <li class="people-item">
-            <img
-              src="./images/img24.jpg"
-              alt="photo of Daniel Wilson"
-              width="264"
-            />
-            <h3 class="people-name">Daniel Wilson</h3>
-            <p class="people-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container people-container">
+          <h2 class="people-title">Our Team</h2>
+          <ul class="people-list list">
+            <li class="people-item">
+              <img
+                src="./images/img.jpg"
+                alt="photo of Mark Guerrero"
+                width="264"
+              />
+              <div class="container-img">
+                <h3 class="people-name">Mark Guerrero</h3>
+                <p class="people-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="people-item">
+              <img
+                src="./images/img22.jpg"
+                alt="photo of Tom Ford"
+                width="264"
+              />
+              <div class="container-img">
+                <h3 class="people-name">Tom Ford</h3>
+                <p class="people-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="people-item">
+              <img
+                src="./images/img23.jpg"
+                alt="photo of Camila Garcia"
+                width="264"
+              />
+              <div class="container-img">
+                <h3 class="people-name">Camila Garcia</h3>
+                <p class="people-text">Marketing</p>
+              </div>
+            </li>
+            <li class="people-item">
+              <img
+                src="./images/img24.jpg"
+                alt="photo of Daniel Wilson"
+                width="264"
+              />
+              <div class="container-img">
+                <h3 class="people-name">Daniel Wilson</h3>
+                <p class="people-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
