--- a/portfolio.html
+++ b/portfolio.html
@@ -83,9 +83,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Banking App Interface Concept</h2>
-                <p class="portfolio-item-text">App</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Banking App Interface Concept</h2>
+                  <p class="portfolio-item-text">App</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -95,9 +97,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Cashless Payment</h2>
-                <p class="portfolio-item-text">Marketing</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Cashless Payment</h2>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -107,9 +111,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Meditation App</h2>
-                <p class="portfolio-item-text">App</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Meditation App</h2>
+                  <p class="portfolio-item-text">App</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -119,9 +125,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Taxi Service</h2>
-                <p class="portfolio-item-text">Marketing</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Taxi Service</h2>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -131,9 +139,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Screen Illustrations</h2>
-                <p class="portfolio-item-text">Design</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Screen Illustrations</h2>
+                  <p class="portfolio-item-text">Design</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -143,9 +153,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Online Courses</h2>
-                <p class="portfolio-item-text">Marketing</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Online Courses</h2>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -155,9 +167,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Instagram Stories Concept</h2>
-                <p class="portfolio-item-text">Design</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Instagram Stories Concept</h2>
+                  <p class="portfolio-item-text">Design</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -167,9 +181,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Organic Food</h2>
-                <p class="portfolio-item-text">Web Site</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Organic Food</h2>
+                  <p class="portfolio-item-text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="./portfolio.html" class="portfolio-img-link link"
@@ -179,9 +195,11 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="portfolio-name">Fresh Coffee</h2>
-                <p class="portfolio-item-text">Web Site</p></a
-              >
+                <div class="container-name">
+                  <h2 class="portfolio-name">Fresh Coffee</h2>
+                  <p class="portfolio-item-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
