--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
             </li>
           </ul>
           <ul class="portfolio-list-name portfolio-list-img list">
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img5.jpg"
@@ -89,7 +89,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img6.jpg"
@@ -103,7 +103,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img7.jpg"
@@ -117,7 +117,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img8.jpg"
@@ -131,7 +131,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img9.jpg"
@@ -145,7 +145,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img10.jpg"
@@ -159,7 +159,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img11.jpg"
@@ -173,7 +173,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img12.jpg"
@@ -187,7 +187,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <a href="./portfolio.html" class="portfolio-img-link link"
                 ><img
                   src="./images/img13.jpg"
