--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container mesenger-container">
           <h2 class="mesenger-title">What are we doing</h2>
           <ul class="mesenger-list list">
-            <li>
+            <li class="mesenger-list-item">
               <img
                 src="./images/Rectangle71.jpg"
                 alt="Desktop app img"
@@ -113,7 +113,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="mesenger-list-item">
               <img
                 src="./images/img2.jpg"
                 alt="Mesenger img"
@@ -121,7 +121,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="mesenger-list-item">
               <img
                 src="./images/img3.jpg"
                 alt="Mobile app img"
