--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </section>
       <section class="service">
         <div class="container service-container">
-          <h2 class="visually-hidden" hidden>service</h2>
+          <h2 class="visually-hidden">service</h2>
           <ul class="service-list list">
             <li class="service-item">
               <h3 class="service-name">Strategy</h3>
