--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     <main>
       <section class="portfolio">
         <div class="container main-container">
-          <h1 class="visually-hidden" hidden>portfolio</h1>
+          <h1 class="visually-hidden">portfolio</h1>
           <ul class="portfolio-list list">
             <li><button type="button" class="portfolio-btn">All</button></li>
             <li>
